# aiuserOAI-Codex

./: .git-askpass.sh  README.md  info.json  pyproject.toml
.github/workflows/: ci.yml
gpt5assistant/: __init__.py  cog.py  config_schemas.py  dispatcher.py  function_handlers.py  info.json  memory_storage.py  messages.py  openai_client.py  vector_store_manager.py
gpt5assistant/tools/: code_interpreter.py  file_search.py  image.py  web_search.py
gpt5assistant/utils/: chunking.py  classifiers.py  discord_io.py  filters.py  streaming.py  variables.py
tests/: test_chunking.py  test_dispatcher.py  test_streaming.py
